# BScAssignment

./: .gitignore  pyproject.toml
bandstructures/: .gitignore  CsPbI3.json  GaAs.json
src/BScAssignment/: bandstructures.py  fit_bandstructure  material_summary  result_summary  show_result
src/BScAssignment/fitting/: fit.py
src/BScAssignment/utils/: JSONEncoder.py  convert_bands.py  misc.py  result_finder.py  show_hamiltonian.py  soc_derivation.py  summarize_result.py
src/BScAssignment/visualisation/: plot.py  statistics.py
unit_cells/: Cs2AgBiBr6.json  Cs2AgBiBr6_SOC.json  Cs2AgBiBr6_flip.json  Cs2AgBiBr6_simple.json  Cs2AgInCl6.json  Cs2AgInCl6_flip.json  Cs2AgInCl6_ins.json  Cs2AgSbBr6.json  Cs2AgSbBr6_SOC.json  Cs2Pb2I6.json  Cs2Pb2I6_conventional.json  Cs2TlBiBr6.json  Cs2TlBiBr6_SOC.json  Cs2TlBiBr6_SOC_wo_TLp.json  Cs2TlBiBr6_SOC_wo_TLp_flip.json  Cs2TlBiBr6_flip.json  Cs2TlBiBr6_wo_TLp.json  CsPbI3_JE.json  CsPbI3_SOC.json  CsPbI3_SOC_JE.json  GaAs.json  MAPbI.json  double.json  double_flip.json
unit_cells/.ipynb_checkpoints/: CsPbI3-checkpoint.json
